2008-07-22  Martin Lambers <marlam@marlam.de>

	* gnulib/*: Gnulib update.
	* configure.ac, doc/cvltonemap.1, doc/cvltonemap.texi: Bump version to
	0.2.2.
	* configure.ac: Require CVL >= 0.2.5.
	* gnulib/m4/gnulib-comp.m4, gnulib/m4/gnulib-cache.m4,
	gnulib/Makefile.am, configure.ac, src/Makefile.am, build-aux/cvl.m4, 
	build-aux/glew.m4, build-aux/ltmain.sh, build-aux/Makefile.am, 
	mhlib/Makefile.am: Improve detection and usage of external libraries.
	Use libtool to get linking right.
	* src/cvltonemap.cpp, src/view_area.cpp: Reduce usage of graphics
	memory by using float16 textures where appropriate.

2008-07-02  Martin Lambers <marlam@marlam.de>

	* src/view_area.cpp: Clear the color buffer on initialization and on
	certain errors.

2008-06-25  Martin Lambers <marlam@marlam.de>

	* build-aux/qt4.m4: Search Qt4 libs also in lib64. Reported by Rainer
	Bachl. Thanks!

2008-06-24  Martin Lambers <marlam@marlam.de>

	* configure.ac: Fix linking with libGLEW in some situations.

2008-05-17  Martin Lambers <marlam@marlam.de>

	* configure.ac: Bump version to 0.2.1. Require CVL >= 0.2.4 to benefit
	from some bug fixes.
	* NEWS, doc/cvltonemap.1, doc/cvltonemap.texi: Update for version
	0.2.1.

2008-05-16  Martin Lambers <marlam@marlam.de>

	* mhlib/mh_os.h: Remove non-portable MH_STDIN and MH_STDOUT macros.

2008-04-14  Martin Lambers <marlam@marlam.de>

	* src/view_area.cpp: Use GL_CLAMP_TO_EDGE instead of GL_CLAMP for 
	textures.

2008-03-04  Martin Lambers <marlam@marlam.de>

	* mhlib/Makefile.am, src/Makefile.am: Fix potential problems with
	VPATH builds.

2008-02-26  Martin Lambers <marlam@marlam.de>

	* gnulib/*: Update gnulib. Import havelib module.

2008-01-19  Martin Lambers <marlam@marlam.de>

	* *: Update license to GPLv3 or later.
	* gnulib/*: Update gnulib.

2008-01-18  Martin Lambers <marlam@marlam.de>

	* mhlib/mh_alloc.h, mhlib/mh_alloc.c, mhlib/mh_math.h,
	mhlib/mh_math.c: Do not use "extern inline" because its semantics are