@@ -1,3 +1,11 @@
+2008-07-25  Martin Lambers <marlam@marlam.de>
+
+	* src/precision_selector.h, src/precision_selector.cpp,
+	src/view_area.h, src/view_area.cpp, src/cvltonemap.h,
+	src/cvltonemap.cpp, src/Makefile.am: Add a selector to select 16 or 32
+	bit floating point precision. 16 bit halves graphcis memory usage and is
+	usually	sufficient.
+
 2008-07-22  Martin Lambers <marlam@marlam.de>
 
 	* gnulib/*: Gnulib update.
